Se actualizan los controladores y modelos de acuerdo a los cambios realizados al modelo de datos
