# swagger/swagger.json
@@ -361,179 +361,6 @@
                 }
             }
         },
-        "/dato_adicional_tipo_experiencia_laboral/": {
-            "get": {
-                "tags": [
-                    "dato_adicional_tipo_experiencia_laboral"
-                ],
-                "description": "get DatoAdicionalTipoExperienciaLaboral",
-                "operationId": "DatoAdicionalTipoExperienciaLaboralController.Get All",
-                "parameters": [
-                    {
-                        "in": "query",
-                        "name": "query",
-                        "description": "Filter. e.g. col1:v1,col2:v2 ...",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "fields",
-                        "description": "Fields returned. e.g. col1,col2 ...",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "sortby",
-                        "description": "Sorted-by fields. e.g. col1,col2 ...",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "order",
-                        "description": "Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "limit",
-                        "description": "Limit the size of result set. Must be an integer",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "offset",
-                        "description": "Start position of result set. Must be an integer",
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.DatoAdicionalTipoExperienciaLaboral"
-                        }
-                    },
-                    "403": {
-                        "description": ""
-                    }
-                }
-            },
-            "post": {
-                "tags": [
-                    "dato_adicional_tipo_experiencia_laboral"
-                ],
-                "description": "create DatoAdicionalTipoExperienciaLaboral",
-                "operationId": "DatoAdicionalTipoExperienciaLaboralController.Post",
-                "parameters": [
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "body for DatoAdicionalTipoExperienciaLaboral content",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.DatoAdicionalTipoExperienciaLaboral"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "{int} models.DatoAdicionalTipoExperienciaLaboral"
-                    },
-                    "403": {
-                        "description": "body is empty"
-                    }
-                }
-            }
-        },
-        "/dato_adicional_tipo_experiencia_laboral/{id}": {
-            "get": {
-                "tags": [
-                    "dato_adicional_tipo_experiencia_laboral"
-                ],
-                "description": "get DatoAdicionalTipoExperienciaLaboral by id",
-                "operationId": "DatoAdicionalTipoExperienciaLaboralController.Get One",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "id",
-                        "description": "The key for staticblock",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.DatoAdicionalTipoExperienciaLaboral"
-                        }
-                    },
-                    "403": {
-                        "description": ":id is empty"
-                    }
-                }
-            },
-            "put": {
-                "tags": [
-                    "dato_adicional_tipo_experiencia_laboral"
-                ],
-                "description": "update the DatoAdicionalTipoExperienciaLaboral",
-                "operationId": "DatoAdicionalTipoExperienciaLaboralController.Put",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "id",
-                        "description": "The id you want to update",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "body for DatoAdicionalTipoExperienciaLaboral content",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.DatoAdicionalTipoExperienciaLaboral"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.DatoAdicionalTipoExperienciaLaboral"
-                        }
-                    },
-                    "403": {
-                        "description": ":id is not int"
-                    }
-                }
-            },
-            "delete": {
-                "tags": [
-                    "dato_adicional_tipo_experiencia_laboral"
-                ],
-                "description": "delete the DatoAdicionalTipoExperienciaLaboral",
-                "operationId": "DatoAdicionalTipoExperienciaLaboralController.Delete",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "id",
-                        "description": "The id you want to delete",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "{string} delete success!"
-                    },
-                    "403": {
-                        "description": "id is empty"
-                    }
-                }
-            }
-        },
         "/experiencia_laboral/": {
             "get": {
                 "tags": [
@@ -1053,179 +880,6 @@
                 }
             }
         },
-        "/tipo_experiencia_laboral/": {
-            "get": {
-                "tags": [
-                    "tipo_experiencia_laboral"
-                ],
-                "description": "get TipoExperienciaLaboral",
-                "operationId": "TipoExperienciaLaboralController.Get All",
-                "parameters": [
-                    {
-                        "in": "query",
-                        "name": "query",
-                        "description": "Filter. e.g. col1:v1,col2:v2 ...",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "fields",
-                        "description": "Fields returned. e.g. col1,col2 ...",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "sortby",
-                        "description": "Sorted-by fields. e.g. col1,col2 ...",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "order",
-                        "description": "Order corresponding to each sortby field, if single value, apply to all sortby fields. e.g. desc,asc ...",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "limit",
-                        "description": "Limit the size of result set. Must be an integer",
-                        "type": "string"
-                    },
-                    {
-                        "in": "query",
-                        "name": "offset",
-                        "description": "Start position of result set. Must be an integer",
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.TipoExperienciaLaboral"
-                        }
-                    },
-                    "403": {
-                        "description": ""
-                    }
-                }
-            },
-            "post": {
-                "tags": [
-                    "tipo_experiencia_laboral"
-                ],
-                "description": "create TipoExperienciaLaboral",
-                "operationId": "TipoExperienciaLaboralController.Post",
-                "parameters": [
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "body for TipoExperienciaLaboral content",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.TipoExperienciaLaboral"
-                        }
-                    }
-                ],
-                "responses": {
-                    "201": {
-                        "description": "{int} models.TipoExperienciaLaboral"
-                    },
-                    "403": {
-                        "description": "body is empty"
-                    }
-                }
-            }
-        },
-        "/tipo_experiencia_laboral/{id}": {
-            "get": {
-                "tags": [
-                    "tipo_experiencia_laboral"
-                ],
-                "description": "get TipoExperienciaLaboral by id",
-                "operationId": "TipoExperienciaLaboralController.Get One",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "id",
-                        "description": "The key for staticblock",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.TipoExperienciaLaboral"
-                        }
-                    },
-                    "403": {
-                        "description": ":id is empty"
-                    }
-                }
-            },
-            "put": {
-                "tags": [
-                    "tipo_experiencia_laboral"
-                ],
-                "description": "update the TipoExperienciaLaboral",
-                "operationId": "TipoExperienciaLaboralController.Put",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "id",
-                        "description": "The id you want to update",
-                        "required": true,
-                        "type": "string"
-                    },
-                    {
-                        "in": "body",
-                        "name": "body",
-                        "description": "body for TipoExperienciaLaboral content",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.TipoExperienciaLaboral"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.TipoExperienciaLaboral"
-                        }
-                    },
-                    "403": {
-                        "description": ":id is not int"
-                    }
-                }
-            },
-            "delete": {
-                "tags": [
-                    "tipo_experiencia_laboral"
-                ],
-                "description": "delete the TipoExperienciaLaboral",
-                "operationId": "TipoExperienciaLaboralController.Delete",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "id",
-                        "description": "The id you want to delete",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "{string} delete success!"
-                    },
-                    "403": {
-                        "description": "id is empty"
-                    }
-                }
-            }
-        },
         "/tipo_vinculacion/": {
             "get": {
                 "tags": [
@@ -1434,25 +1088,9 @@
                 "Activo": {
                     "type": "boolean"
                 },
-                "DatoAdicionalTipoExperienciaLaboral": {
-                    "$ref": "#/definitions/models.DatoAdicionalTipoExperienciaLaboral"
-                },
                 "ExperienciaLaboral": {
                     "$ref": "#/definitions/models.ExperienciaLaboral"
                 },
-                "Id": {
-                    "type": "integer",
-                    "format": "int64"
-                },
-                "Valor": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.DatoAdicionalTipoExperienciaLaboral": {
-            "title": "DatoAdicionalTipoExperienciaLaboral",
-            "type": "object",
-            "properties": {
                 "Id": {
                     "type": "integer",
                     "format": "int64"
@@ -1461,8 +1099,8 @@
                     "type": "integer",
                     "format": "int64"
                 },
-                "TipoExperienciaLaboral": {
-                    "$ref": "#/definitions/models.TipoExperienciaLaboral"
+                "Valor": {
+                    "type": "string"
                 }
             }
         },
@@ -1499,9 +1137,6 @@
                 "TipoDedicacion": {
                     "$ref": "#/definitions/models.TipoDedicacion"
                 },
-                "TipoExperienciaLaboral": {
-                    "$ref": "#/definitions/models.TipoExperienciaLaboral"
-                },
                 "TipoVinculacion": {
                     "$ref": "#/definitions/models.TipoVinculacion"
                 }
@@ -1529,32 +1164,6 @@
         },
         "models.TipoDedicacion": {
             "title": "TipoDedicacion",
-            "type": "object",
-            "properties": {
-                "Activo": {
-                    "type": "boolean"
-                },
-                "CodigoAbreviacion": {
-                    "type": "string"
-                },
-                "Descripcion": {
-                    "type": "string"
-                },
-                "Id": {
-                    "type": "integer",
-                    "format": "int64"
-                },
-                "Nombre": {
-                    "type": "string"
-                },
-                "NumeroOrden": {
-                    "type": "number",
-                    "format": "double"
-                }
-            }
-        },
-        "models.TipoExperienciaLaboral": {
-            "title": "TipoExperienciaLaboral",
             "type": "object",
             "properties": {
                 "Activo": {
@@ -1630,14 +1239,6 @@
         {
             "name": "experiencia_laboral",
             "description": "ExperienciaLaboralController operations for ExperienciaLaboral\n"
-        },
-        {
-            "name": "tipo_experiencia_laboral",
-            "description": "TipoExperienciaLaboralController operations for TipoExperienciaLaboral\n"
-        },
-        {
-            "name": "dato_adicional_tipo_experiencia_laboral",
-            "description": "DatoAdicionalTipoExperienciaLaboralController operations for DatoAdicionalTipoExperienciaLaboral\n"
         }
     ]
 }
